@@ -27,14 +27,6 @@
 #
 # or see the accompanying documentation in the docs/  directory
 #
-# or
-#
-#    http://www-texdev.ics.mq.edu.au/l2h/docs/manual/
-#
-# or
-#
-#    http://www.cbl.leeds.ac.uk/nikos/tex2html/doc/latex2html/
-#
 # Original code written by Nikos Drakos, July 1993.
 #
 # Address: Computer Based Learning Unit
@@ -1207,7 +1199,7 @@ sub process_ext_file {
 	&slurp_input($file);
 	if ($ext =~ /bbl/) {
 	    # remove the \newcommand{\etalchar}{...} since not needed
-	    s/^\\newcommand{\\etalchar}[^\n\r]*[\n\r]+//s;
+	    s/^\\newcommand\{\\etalchar\}[^\n\r]*[\n\r]+//s;
 	}
 	&pre_process;
 	&substitute_meta_cmds if (%new_command || %new_environment);
@@ -1465,7 +1457,7 @@ sub pre_process {
 	    push(@processedV,$before);
 	    print "'";$before = '';
 	}
- 	if ($after =~ /\s*\\end{$env[*]?}/) { # Must NOT use the s///o option!!!
+ 	if ($after =~ /\s*\\end\{$env[*]?\}/) { # Must NOT use the s///o option!!!
 	    ($contents, $after) = ($`, $');
  	    $contents =~ s/^\n+/\n/s;
 # 	    $contents =~ s/\n+$//s;
@@ -1898,8 +1890,8 @@ sub mark_string {
     # local (*_) = @_; # Modifies $_ in the caller;
     # -> MRO: changed to $_[0] (same effect)
     # MRO: removed deprecated $*, replaced by option /m
-    $_[0] =~ s/(^|[^\\])\\{/$1tex2html_escaped_opening_bracket/gom;
-    $_[0] =~ s/(^|[^\\])\\{/$1tex2html_escaped_opening_bracket/gom; # repeat this
+    $_[0] =~ s/(^|[^\\])\\\{/$1tex2html_escaped_opening_bracket/gom;
+    $_[0] =~ s/(^|[^\\])\\\{/$1tex2html_escaped_opening_bracket/gom; # repeat this
     $_[0] =~ s/(^|[^\\])\\}/$1tex2html_escaped_closing_bracket/gom;
     $_[0] =~ s/(^|[^\\])\\}/$1tex2html_escaped_closing_bracket/gom; # repeat this
     my $id = $global{'max_id'};
@@ -2780,7 +2772,7 @@ sub translate_environments {
 	    $open_tags_R = [ @save_open_tags ];
 	    # check for color
 	    local($color_test) = join(',',@$open_tags_R);
-	    if ($color_test =~ /(color{[^}]*})/g ) {
+	    if ($color_test =~ /(color\{[^}]*\})/g ) {
 		$color_env = $1;
 	    } # else { $color_env = '' }
 
@@ -2791,7 +2783,7 @@ sub translate_environments {
 		$open_tags_R = [ @save_open_tags ];
 		if ($color_env) {
 		    $color_test = join(',',@saved_tags);
-		    if ($color_test =~ /(color{[^}]*})/g ) {
+		    if ($color_test =~ /(color\{[^}]*\})/g ) {
 		        $color_env = $1;
 		    }
 		}
@@ -6508,7 +6500,7 @@ sub parse_keyvalues {
     print "\nATTRIBS: $saved\n" if ($VERBOSITY > 6);
 
     $saved =~ s/$percent_mark/%/g;
-    $saved =~ s/((^|[\s,=])')\\\W{(\w)}/$1$3/g
+    $saved =~ s/((^|[\s,=])')\\\W\{(\w)\}/$1$3/g
 	if $is_german;  #unwanted accents, from active "
     if (@tags) {
 	foreach $tag (@tags) {
@@ -7125,10 +7117,6 @@ sub make_head_and_body {
 
     join("\n", (($DOCTYPE)? $DTDcomment : '' )
 	,"<!--Converted with LaTeX2HTML $TEX2HTMLVERSION"
-	, "original version by:  Nikos Drakos, CBLU, University of Leeds"
-	, "* revised and updated by:  Marcus Hennecke, Ross Moore, Herb Swan"
-	, "* with significant contributions from:"
-	, "  Jens Lippmann, Marek Rouchal, Martin Wilck and others"
 	    . " -->\n<HTML>\n<HEAD>\n<TITLE>".$title."</TITLE>"
 	, &meta_information($title)
 	,  ($CHARSET && $HTML_VERSION ge "2.1" ? 
